--- a/app/src/main/res/layout/booking_details.xml
+++ b/app/src/main/res/layout/booking_details.xml
@@ -49,7 +49,7 @@
             android:layout_gravity="end"
             android:layout_marginHorizontal="40sp"
             android:layout_marginTop="30sp"
-            android:text="@string/ActualHours"
+            android:text="ActualHours"
             android:textColor="@color/orange_500"
             android:textSize="17sp"
             tools:ignore="TextSizeCheck,TextContrastCheck" />
