--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -36,7 +36,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/crdContactForm"
         android:layout_width="360sp"
-        android:layout_height="850sp"
+        android:layout_height="900sp"
         android:layout_gravity="center"
         app:cardCornerRadius="15sp"
         android:layout_marginTop="260sp"
@@ -114,12 +114,22 @@
             android:layout_gravity="end"
             tools:ignore="SpeakableTextPresentCheck" />
 
+        <Spinner
+            android:id="@+id/spiSelectOperator"
+            android:layout_width="match_parent"
+            android:layout_height="50sp"
+            android:layout_marginHorizontal="25sp"
+            android:layout_marginTop="430sp"
+            android:textColor="@color/orange_500"
+            android:layout_gravity="end"
+            tools:ignore="SpeakableTextPresentCheck" />
+
         <EditText
             android:id="@+id/txtPincode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="25sp"
-            android:layout_marginTop="430sp"
+            android:layout_marginTop="500sp"
             android:autofillHints=""
             android:backgroundTint="@color/orange_500"
             android:hint="@string/pincode"
@@ -133,7 +143,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="25sp"
-            android:layout_marginTop="500sp"
+            android:layout_marginTop="570sp"
             android:autofillHints=""
             android:backgroundTint="@color/orange_500"
             android:hint="@string/phone_number"
@@ -143,11 +153,11 @@
             tools:ignore="TextContrastCheck" />
 
         <EditText
-            android:id="@+id/txtQuery"
+            android:id="@+id/txtCropName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="25sp"
-            android:layout_marginTop="570sp"
+            android:layout_marginTop="635sp"
             android:autofillHints=""
             android:backgroundTint="@color/orange_500"
             android:hint="@string/crop_name"
@@ -156,17 +166,17 @@
             android:textColorHint="@color/orange_500"
             tools:ignore="TextContrastCheck" />
 
-        <EditText
+        <TextView
             android:id="@+id/idEdtDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="25sp"
-
-            android:layout_marginTop="635sp"
+            android:layout_marginTop="705sp"
             android:autofillHints=""
             android:backgroundTint="@color/orange_500"
             android:hint="@string/date"
-            android:minHeight="48dp"
+            android:minHeight="30dp"
+            android:textSize="20sp"
             android:textColorHint="@color/orange_500"
             android:clickable="false"
             android:cursorVisible="false"
@@ -179,7 +189,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="25sp"
-            android:layout_marginTop="705sp"
+            android:layout_marginTop="785sp"
             android:autofillHints=""
             android:backgroundTint="@color/orange_500"
             android:hint="@string/hours"
@@ -192,7 +202,7 @@
             android:layout_width="210sp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="75sp"
-            android:layout_marginTop="785sp"
+            android:layout_marginTop="850sp"
             android:backgroundTint="@color/green_500"
             android:text="@string/submit"
             android:textColor="#ffffff"
