--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -18,7 +18,7 @@
     <!-- TODO: Update blank fragment layout -->
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="200sp"
+        android:layout_height="match_parent"
         app:cardCornerRadius="20sp"
         android:layout_margin="25sp"
         app:cardElevation="30sp">
@@ -26,9 +26,9 @@
         <com.denzcoskun.imageslider.ImageSlider
             android:id="@+id/image_slider"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="193sp"
             app:iss_auto_cycle="true"
-            app:iss_period="1000"
+            app:iss_period="3000"
             app:iss_delay="0" />
 
     </androidx.cardview.widget.CardView>
@@ -46,8 +46,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
+        android:layout_height="match_parent" >
 
         <TextView
             android:id="@+id/txtContactForm"
@@ -68,6 +67,8 @@
             android:layout_height="50sp"
             android:layout_marginHorizontal="25sp"
             android:layout_marginTop="100sp"
+            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
+            android:backgroundTint="@color/orange_500"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <EditText
@@ -80,7 +81,6 @@
             android:backgroundTint="@color/orange_500"
             android:hint="@string/full_name"
             android:inputType="text"
-
             android:textColorHint="@color/orange_500"
             tools:ignore="TextContrastCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
 
@@ -90,6 +90,8 @@
             android:layout_height="50sp"
             android:layout_marginHorizontal="25sp"
             android:layout_marginTop="225sp"
+            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
+            android:backgroundTint="@color/orange_500"
             android:textColor="@color/orange_500"
             tools:ignore="SpeakableTextPresentCheck" />
 
@@ -100,7 +102,9 @@
             android:layout_marginHorizontal="25sp"
             android:layout_marginTop="295sp"
             android:textColor="@color/orange_500"
-            android:layout_gravity="end"
+            android:layout_gravity="center"
+            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
+            android:backgroundTint="@color/orange_500"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <Spinner
@@ -110,7 +114,9 @@
             android:layout_marginHorizontal="25sp"
             android:layout_marginTop="360sp"
             android:textColor="@color/orange_500"
-            android:layout_gravity="end"
+            android:layout_gravity="center"
+            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
+            android:backgroundTint="@color/orange_500"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <Spinner
@@ -120,7 +126,9 @@
             android:layout_marginHorizontal="25sp"
             android:layout_marginTop="430sp"
             android:textColor="@color/orange_500"
-            android:layout_gravity="end"
+            android:layout_gravity="center"
+            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
+            android:backgroundTint="@color/orange_500"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <EditText
@@ -168,18 +176,14 @@
         <TextView
             android:id="@+id/idEdtDate"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="45sp"
             android:layout_marginHorizontal="25sp"
             android:layout_marginTop="705sp"
             android:autofillHints=""
             android:backgroundTint="@color/orange_500"
             android:hint="@string/date"
-            android:minHeight="30dp"
             android:textSize="20sp"
             android:textColorHint="@color/orange_500"
-            android:clickable="false"
-            android:cursorVisible="false"
-            android:focusable="false"
             android:focusableInTouchMode="false"
             tools:ignore="TextContrastCheck,TextFields" />
 
@@ -188,7 +192,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="25sp"
-            android:layout_marginTop="785sp"
+            android:layout_marginTop="765sp"
             android:autofillHints=""
             android:backgroundTint="@color/orange_500"
             android:hint="@string/hours"
@@ -201,7 +205,7 @@
             android:layout_width="210sp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="75sp"
-            android:layout_marginTop="850sp"
+            android:layout_marginTop="830sp"
             android:backgroundTint="@color/green_500"
             android:text="@string/submit"
             android:textColor="#ffffff"
